# enact-python

./: .gitignore  README.md  pyproject.toml  script.py
examples/: data_analysis_test.py  data_analyzer.yaml  helloworld.py  search_example.py  simple_test.py  stock_price.py
src/enact/: __init__.py  client.py  dependency_manager.py  executor.py  models.py
tests/: test_client.py
