[tool.poetry]
name = "enact-python"
version = "0.1.0"
description = "Python SDK for the Enact protocol"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "enact", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
fix = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
